:art: [QuickOpen] Path is too wide #5860 Add a feature path to visible at QuickOpen Modal Dialog #resolve +review @jasonLaster.

--- a/src/components/shared/ResultList.css
+++ b/src/components/shared/ResultList.css
@@ -61,7 +61,6 @@
   line-height: 1.5em;
   word-break: break-all;
   text-overflow: ellipsis;
-  overflow: hidden;
   white-space: nowrap;
 }
 
